# xdg-desktop-portal-shana

./: Cargo.toml  README.md  meson.build
.github/workflows/: release.yml  typos.yml
archlinux/: PKGBUILD
crates/filedialogshana/: Cargo.toml
crates/filedialogshana/src/: fileicon.rs  io_file.rs  lib.rs  patterns.rs
crates/filedialogshana/ui/: appwindow.slint  global.slint
crates/shanatypes/: Cargo.toml
crates/shanatypes/src/: lib.rs
misc/: adorable-shana.portal  config.toml  org.freedesktop.impl.portal.desktop.shana.service  org.freedesktop.impl.portal.desktop.shana.service.in  shana.portal  xdg-desktop-portal-shana.service.in
misc/test/: config1.toml
src/: backends.rs  config.rs  filechoosertypes.rs  main.rs  protaltypes.rs  shana_chooser.rs
src/shana_chooser/: dirfs.rs  icon_cache.rs  utils.rs
tools/shanatest/: Cargo.toml
tools/shanatest/src/: main.rs
