[package]
name = "xdg-desktop-portal-shana"
version = "0.3.14"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio", "url"] }
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5", features = ["serde"] }
serde_repr = "0.1"
toml = "0.8.19"
notify = "6.1.1"
once_cell = "1.20.2"
futures = "0.3.31"
