[package]
name = "xdg-desktop-portal-shana"
version = "0.3.15"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio", "url"] }
tokio = { version = "1.46.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5", features = ["serde"] }
serde_repr = "0.1"
toml = "0.8.22"
notify = "8.0.0"
futures = "0.3.31"
