[package]
name = "xdg-desktop-portal-shana"
version = "0.3.15"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio", "url"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = { version = "2.5", features = ["serde"] }
serde_repr = "0.1"
toml = "0.9.5"
notify = "8.2.0"
futures = "0.3.31"
