[package]
name = "filedialogshana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.3.3"
gio = "0.15.12"
libc = "0.2"
users = "0.11.0"
shanatypes = { path = "../shanatypes" }
once_cell = "1.16.0"
glob = "0.3.0"
image = "0.24.5"

[build-dependencies]
slint-build = "0.3"
