[package]
name = "filedialogshana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0.0"
gio = "0.17.4"
libc = "0.2"
users = "0.11.0"
shanatypes = { path = "../shanatypes" }
once_cell = "1.17.1"
glob = "0.3.1"
image = "0.24.6"

[build-dependencies]
slint-build = "1.0"
