[package]
name = "shanatypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "2", default-features = false, features = ["tokio", "url"] }
tokio = { version = "1.23.0", features = ["full"] }
url = { version = "2.3", features = ["serde"] }
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"] }
